--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 </head>
 <body>
   <main class="container">
-    
-    <div class="info">
-      <img src="images/image-product-desktop.jpg" alt="image-product-desktop">
-      <span>Perfume</span>
-      <h1>Gabrielle Essence Eau De Parfum</h1>
-      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-      Perfumer-Creator for the House of CHANEL.</p>
-      <span>$149.99</span>
-      <span>$169.99</span>
-      <button>Add to Cart</button>
-    </div>
+    <section class="card">
+      <img src="images/image-product-mobile.jpg" alt="image-product-mobile">
+      <div class="card__info">
+        <h2>Perfume</h2>
+        <h1>Gabrielle Essence Eau De Parfum</h1>
+        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        Perfumer-Creator for the House of CHANEL.</p>
+        <span>$149.99</span>
+        <span>$169.99</span>
+        <div class="card__button">
+          <button>Add to Cart</button>
+        </div>
+      </div>
+    </section>
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a target="_blank" href="https://www.github.com/ezequielastrada">Ezequiel Astrada</a>.
